// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Should render BasicButton with Icon 1`] = `
<div>
  <button
    class="quill-button quill-button__size--md quill__color--primary-coral"
    data-state=""
  >
    Label
  </button>
</div>
`;

exports[`Button component Should render BasicButton with variant=primary 1`] = `
<div>
  <button
    class="quill-button quill-button__size--md quill__color--primary-coral"
    data-state=""
  >
    Label
  </button>
</div>
`;

exports[`Button component Should render BasicButton with variant=secondary 1`] = `
<div>
  <button
    class="quill-button quill-button__size--md quill__color--secondary-coral"
    data-state=""
  >
    Label
  </button>
</div>
`;

exports[`Button component Should render BasicButton with variant=tertiary 1`] = `
<div>
  <button
    class="quill-button quill-button__size--md quill__color--tertiary-coral"
    data-state=""
  >
    Label
  </button>
</div>
`;
